--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=3500
-CONNECTION_STRING=mongodb+srv://admin-arbaz:DSVHG9TSfQjlvY5g@cluster0.b1sjoaq.mongodb.net/arbaz-smp?retryWrites=true&w=majority&appName=Cluster0
+# CONNECTION_STRING=mongodb+srv://admin-arbaz:DSVHG9TSfQjlvY5g@cluster0.b1sjoaq.mongodb.net/arbaz-smp?retryWrites=true&w=majority&appName=Cluster0
+CONNECTION_STRING=mongodb://localhost:27017/arbaz-smp
 EMAIL_FROM=arbazkamboh342@gmail.com
 
 MT_HOST=sandbox.smtp.mailtrap.io
